<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <EditText
        android:id="@+id/register_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="@integer/phone_length"
        android:hint="@string/launch_phone"
        android:inputType="phone" />

    <EditText
        android:id="@+id/register_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords|textNoSuggestions"
        android:hint="@string/launch_name" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/launch_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/register_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/launch_confirm"
        android:inputType="textPassword"
        android:imeOptions="actionDone" />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/launch_register" />
</LinearLayout>